--- a/FinalProject/styles/main.css
+++ b/FinalProject/styles/main.css
@@ -1,8 +1,68 @@
-#hideMonths {
+#dateDiv {
     width: 100%;
     padding: 50px 0;
     text-align: center;
     background-color: lightblue;
     margin-top: 20px;
-    display: none;
+
 }
+
+#signsDiv{
+    width: 100%;
+    padding: 50px 0;
+    text-align: center;
+    background-color: lightblue;
+    margin-top: 20px;
+}
+
+
+select {
+    width: 40%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+    font-size: 25px;
+    transition: width 1s;
+    font-family: 'Amatic SC', cursive;
+}
+
+select option{
+    font-family: 'Amatic SC', cursive;
+}
+select:hover{
+    width: 50%;
+
+}
+input{
+    width: 30%;
+    height: 40px;
+    border-style: solid;
+    border-width: medium;
+    border-color: white;
+    background-color: red;
+    animation-name: submit;
+    animation-duration: 40s;
+    font-family: 'Amatic SC', cursive;
+    font-size: 25px;
+    
+}
+@keyframes submit{
+     0%   {background-color: #97d3d3;}
+    15%  {background-color: #89c3eb;}
+    30%  {background-color: #ffe4e1;}
+    45% {background-color: #ffc770;}
+    60%  {background-color: #fb927d;}
+    75% {background-color: #ffd777;}
+    90% {background-color: #cd8d71;}
+    100%   {background-color: #97d3d3;}
+}
+button{
+    font-family: 'Amatic SC', cursive;
+    height:30px;
+    width: 20%;
+    font-size: 20px;
+    background-color: #ee5f83;
+    color: white;
+}
+
