--- a/FinalProject/styles/main.css
+++ b/FinalProject/styles/main.css
@@ -86,25 +86,35 @@ button{
     background-color: #ee5f83;
     color: white;
 }
-#horo{
+.horo{
     display: none;
 }
 .returnedHoro{
     background-color:#97d3d3;
 }
-.returnedHoro h3{
+.collapsible{
     font-family: 'Caveat Brush', cursive;
     color: white;
     font-size: 2em;
     padding: 0px;
-    margin-top: 10px;
+    margin-top: 0px;
     margin-bottom: 0px;
-     margin-left: 10px;
+    margin-left: 10px;
+    cursor: pointer;
+    width: 100%;
 }
-.returnedHoro p{
+.returnedHoro{
     font-family: 'Amatic SC', cursive;
     font-size: 2em;
     margin-top: 0px;
     margin-left: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .2s ease-out;
 }
+
+.active, .collapsible:hover {
+    background-color: green;
+}
+
